volexc/tests/ui/lex_unclosed_comment.out
Error: found end of input but expected "*"
   ╭─[lex_unclosed_comment.vol:5:3]
   │
 5 │ }
   │   │ 
   │   ╰─ Unexpected end of input
   │ 
   │ Note: Expected one of: '*'
───╯