volexc/tests/ui/lex_unclosed_comment.vol
/* This comment is never closed

struct Foo {
    bar: u32;
}
